Fix bug text on horizontal category menu collapsed  --> reduce typical item on menu from 7 to 6

--- a/OnlineStoreMVC/Content/css/tmmegamenu.css
+++ b/OnlineStoreMVC/Content/css/tmmegamenu.css
@@ -121,6 +121,7 @@
 .top_menu .dropdown:hover .dropdown-content {
     display: block;
     color: #960247;
+    z-index:999;
 }
 
 .top_menu .dropdown:hover .dropbtn {
